<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/titleBar"
        layout="@layout/title_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleBar"
        android:layout_marginStart="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_16ssp"
        android:layout_marginEnd="@dimen/_16ssp"
        android:layout_marginBottom="@dimen/_16ssp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60ssp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_28ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30ssp"
            android:background="@drawable/dr_gray_bg"
            android:orientation="vertical"
            android:padding="@dimen/_5ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtLogin">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"
                android:layout_marginBottom="@dimen/_5ssp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/ic_call"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="10"
                android:textColorHint="@color/text_color"
                android:textSize="@dimen/_16ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendCode"
            style="@style/ButtonLightRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25ssp"
            android:text="@string/send_code"
            app:layout_constraintTop_toBottomOf="@+id/llLayout" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/gray"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>